[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/Goal.gd" type="Script" id=1]
[ext_resource path="res://Sprites/BlackGoal.png" type="Texture" id=2]
[ext_resource path="res://Sprites/WhiteGoal.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 32.0

[node name="Goal" type="Node2D"]

scale = Vector2( 0.8, 0.8 )
script = ExtResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="PlayerDetection" type="Area2D" parent="." index="0"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 12
collision_mask = 12
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetection" index="0"]

shape = SubResource( 1 )

[node name="WhiteSprite" type="Sprite" parent="." index="1"]

texture = ExtResource( 2 )

[node name="BlackSprite" type="Sprite" parent="." index="2"]

texture = ExtResource( 3 )


